--- a/app/views/paper/show.html.erb
+++ b/app/views/paper/show.html.erb
@@ -1,3 +1,3 @@
-<%= @paper.title %>
-<%= @paper.content %>
-<%= link_to "edit", edit_paper_path(@paper)%>
+<%= @Paper.title %>
+<%= @Paper.content %>
+<%= link_to "edit", edit_paper_path(@Paper)%>
