--- a/app/views/paper/new.html.erb
+++ b/app/views/paper/new.html.erb
@@ -1,9 +1,6 @@
 <%= form_for :paper, url: paper_index_path do |f| %>
-
-  <%= f.text_field :title %>
-
-  <%= f.text_area :content %>
+  <%= f.text_field :title, placeholder: "title" %>
+  <%= f.text_area :content, placeholder: "content" %>
 
   <%= f.submit %>
-
 <% end %>
