--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,38 +7,14 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <%= link_to "sample app", '#', id: "logo" %>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   '#' %></li>
-            <li><%= link_to "Help",   '#' %></li>
-            <li><%= link_to "Log in", '#' %></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
-      <footer class="footer">
-        <small>
-          The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-          by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
-        </small>
-        <nav>
-          <ul>
-            <li><%= link_to "About",   '#' %></li>
-            <li><%= link_to "Contact", '#' %></li>
-            <li><a href="http://news.railstutorial.org/">News</a></li>
-          </ul>
-        </nav>
-      </footer>
+      <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
