--- a/app/views/paper/index.html.erb
+++ b/app/views/paper/index.html.erb
@@ -7,7 +7,7 @@
       <div class="col p-4 d-flex flex-column position-static">
         <h2 class="mb-0 font-weight-bold"><%= paper.title %></h2>
         <p class="card-text mb-auto h4"><%= paper.content %></p>
-        <%= link_to "Читати дальше", paper_path(paper), :class => 'btn btn-outline-primary' %>
+        <%= link_to "Читати дальше", paper_path(paper), class: 'btn btn-outline-primary' %>
       </div>
     </div>
   </div>
