--- a/app/views/paper/edit.html.erb
+++ b/app/views/paper/edit.html.erb
@@ -2,16 +2,15 @@
 <br>
   <p>
     Name <br>
-    <%= f.text_field :title, placeholder: "title", :class => 'form-control' %>
+    <%= f.text_field :title, placeholder: "title", class: 'form-control' %>
   </p>
 
   <p>
     Content <br>
-  <%= f.text_area :content, placeholder: "content", :class => 'form-control' %>
+  <%= f.text_area :content, placeholder: "content", class: 'form-control' %>
 </p>
 
   <p>
-    <%= f.submit :class => 'btn
-     btn-secondary' %>
+    <%= f.submit class: 'btn btn-secondary' %>
   </p>
 <% end %>
