--- a/app/views/paper/show.html.erb
+++ b/app/views/paper/show.html.erb
@@ -2,5 +2,5 @@
 <h1><%= @paper.title %></h1>
 <p><%= @paper.content %></p>
 
-<%= link_to "edit", edit_paper_path(@paper), :class => 'btn
+<%= link_to "edit", edit_paper_path(@paper), class: 'btn
  btn-secondary'%>
